--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-# Dataset / TF Records
+# Dataset
 research/object_detection/smart_spy/dataset/*
-research/object_detection/smart_spy/tfrecords/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
