--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ lxml = "^4.4"
 jupyter = "^1.0"
 matplotlib = "^3.1"
 opencv-python = "^4.1"
+pycocotools = "^2.0"
 
 [tool.poetry.dev-dependencies]
 pylama = "^7.7"
