--- a/research/object_detection/smart_spy/models/ssd_mobilenet_v1_coco/pipeline.config
+++ b/research/object_detection/smart_spy/models/ssd_mobilenet_v1_coco/pipeline.config
@@ -160,7 +160,7 @@ train_config: {
   # empirically found to be sufficient enough to train the pets dataset. This
   # effectively bypasses the learning rate schedule (the learning rate will
   # never decay). Remove the below line to train indefinitely.
-  # num_steps: 200000
+  num_steps: 200000
   data_augmentation_options {
     random_horizontal_flip {
     }
@@ -180,7 +180,7 @@ train_input_reader: {
 
 eval_config: {
   metrics_set: "coco_detection_metrics"
-  num_examples: 1100
+  num_examples: 16000
 }
 
 eval_input_reader: {
